feat: refactor api get me add current user_subscriptions to response
